add mobile styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<input type="number" name="age" id="age" min="1" max="100" placeholder="Age" required></input><br>
 		</div>
 
+  <div class="two-grid-md">
     <label for="role">Which option best describes your in-game role?</label>
 		<select name="role" form="#" id="dropdown">
 			<option value="" disabled selected>Select an option</option>
@@ -35,6 +36,7 @@
 			<option value="support">Support</option>
 			<option value="flex">Flex</option>
 		</select><br>
+		</div>
 		
 		<label for="recommend">How likely are you to recommend Overwatch to a friend?</label><br>
 		<input type="radio" name="recommend" value="Definitely">Definitely<br>
