style textarea and submit btn

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 		</fieldset>
 		
 		
-		
-		<label for="message">Any Comments or Suggestions?</label>
-		<textarea id="message" name="message" form="#" rows="4" cols="50">Enter your comment here...</textarea>
-
+		<div class="two-grid-md">
+  		<label for="message">Any Comments or Suggestions?</label>
+  		<textarea id="message" name="message" form="#" rows="4" cols="50" placeholder="Enter your comment here..."></textarea>
+    </div>
 		
     <input type="submit" id="submit" value="Submit">
 		
