changed fieldset to div

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 				<option value="arcade">Arcade</option>
 				<option value="customgames">Custom Games</option>
 			</select>
-		</div>
+		
 	
 	
-		<fieldset>
-			<legend>Things that should be improved in the future (Check all that apply):</legend>
+		
+			<div>Things that should be improved in the future (Check all that apply):</div>
 			<div class="checkbox-group">
 				<label for="playerpunishment">Player Punishment</label>
 				<input type="checkbox" id="playerpunishment" name="improve" value="playerpunishment">
@@ -76,8 +76,9 @@
 				<label for="lookforgroup">Look for Group Feature</label>
 				<input type="checkbox" id="lookforgroup" name="improve" value="lookforgroup">
 			</div>
-		</fieldset>
+		</div>
 		
+		</div>
 		
 		<div class="two-grid-md">
   		<label for="message">Any Comments or Suggestions?</label>
