finish checkbox styles

--- a/index.html
+++ b/index.html
@@ -47,34 +47,31 @@
 				<option value="customgames">Custom Games</option>
 			</select>
 		
-	
-	
-		
-			<div>Things that should be improved in the future (Check all that apply):</div>
+			<div id="improve-question">Things that should be improved in the future (Check all that apply):</div>
 			<div class="checkbox-group">
-				<label for="playerpunishment">Player Punishment</label>
-				<input type="checkbox" id="playerpunishment" name="improve" value="playerpunishment">
+				<label for="playerpunishment"><input type="checkbox" id="playerpunishment" name="improve" value="playerpunishment">Player Punishment
+				</label>
 			
-				<label for="characterbalance">Character Balance</label>
-				<input type="checkbox" id="characterbalance" name="improve" value="characterbalance">
+				<label for="characterbalance"><input type="checkbox" id="characterbalance" name="improve" value="characterbalance">Character Balance
+				</label>
 			
-				<label for="smurfreduction">Smurf Reduction</label>
-				<input type="checkbox" id="smurfreduction" name="improve" value="smurfreduction">
+				<label for="smurfreduction"><input type="checkbox" id="smurfreduction" name="improve" value="smurfreduction">Smurf Reduction
+				</label>
 			
-				<label for="matchmaking">Matchmaking System</label>
-				<input type="checkbox" id="matchmaking" name="improve" value="matchmaking">
+				<label for="matchmaking"><input type="checkbox" id="matchmaking" name="improve" value="matchmaking">Matchmaking System
+				</label>
 			
-				<label for="community">Community Engagement</label>
-				<input type="checkbox" id="community" name="improve" value="community">
+				<label for="community"><input type="checkbox" id="community" name="improve" value="community">Community Engagement
+				</label>
 			
-				<label for="skins">Character Skins</label>
-				<input type="checkbox" id="skins" name="improve" value="skins">
+				<label for="skins"><input type="checkbox" id="skins" name="improve" value="skins">Character Skins
+				</label>
 			
-				<label for="gamemodes">Game Modes</label>
-				<input type="checkbox" id="gamemodes" name="improve" value="gamemodes">
+				<label for="gamemodes"><input type="checkbox" id="gamemodes" name="improve" value="gamemodes">Game Modes
+				</label>
 			
-				<label for="lookforgroup">Look for Group Feature</label>
-				<input type="checkbox" id="lookforgroup" name="improve" value="lookforgroup">
+				<label for="lookforgroup"><input type="checkbox" id="lookforgroup" name="improve" value="lookforgroup">Look for Group Feature
+				</label>
 			</div>
 		</div>
 		
